add hyperf 3.0.x-dev

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "tangwei/dto",
+    "name": "wayhood/dto",
     "description": "php hyperf dto",
     "license": "MIT",
     "keywords": [
@@ -19,11 +19,11 @@
     "require": {
         "php": ">=8.0",
         "netresearch/jsonmapper": "^4.0",
-        "hyperf/http-server": "^2.2.0",
-        "hyperf/di": "^2.2",
-        "hyperf/json-rpc": "^2.2",
-        "hyperf/rpc-server": "^2.2",
-        "hyperf/validation": "^2.2",
+        "hyperf/http-server": "3.0.x-dev",
+        "hyperf/di": "3.0.x-dev",
+        "hyperf/json-rpc": "3.0.x-dev",
+        "hyperf/rpc-server": "3.0.x-dev",
+        "hyperf/validation": "3.0.x-dev",
         "symfony/serializer": "^5.0",
         "jetbrains/phpstorm-attributes": "^1.0"
     },
