--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "wayhood/dto",
+    "name": "wayhood/hyperf-dto",
     "description": "php hyperf dto",
     "license": "MIT",
     "keywords": [
